objects/Customer_Gauge_History__c.object
<CustomObject>
    <description>History of NPS scores for dealership</description>
    <fields>
        <fullName>AccountID__c</fullName>
        <label>AccountID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Gauge History</relationshipLabel>
        <relationshipName>Customer_Gauge_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Gauge__c</fullName>
        <label>Customer Gauge</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <label>Survey Date</label>
        <type>Date</type>
    </fields>
    <label>Customer Gauge History</label>
    <nameField>
        <displayFormat>CGH-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Gauge History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>